<resources>
    <string name="app_name">Nafees Quran Demo</string>

    <string name="para1">Parah 1</string>
    <string name="para2">Parah 2</string>
    <string name="para3">Parah 3</string>
    <string name="para4">Parah 4</string>
    <string name="para5">Parah 5</string>
    <string name="para6">Parah 6</string>
    <string name="para7">Parah 7</string>
    <string name="para8">Parah 8</string>
    <string name="para9">Parah 9</string>
    <string name="para10">Parah 10</string>
    <string name="para11">Parah 11</string>
    <string name="para12">Parah 12</string>
    <string name="para13">Parah 13</string>
    <string name="para14">Parah 14</string>
    <string name="para15">Parah 15</string>
    <string name="para16">Parah 16</string>
    <string name="para17">Parah 17</string>
    <string name="para18">Parah 18</string>
    <string name="para19">Parah 19</string>
    <string name="para20">Parah 20</string>
    <string name="para21">Parah 21</string>
    <string name="para22">Parah 22</string>
    <string name="para23">Parah 23</string>
    <string name="para24">Parah 24</string>
    <string name="para25">Parah 25</string>
    <string name="para26">Parah 26</string>
    <string name="para27">Parah 27</string>
    <string name="para28">Parah 28</string>
    <string name="para29">Parah 29</string>
    <string name="para30">Parah 30</string>

    <string name="sura1">Al-Fatiha</string>
    <string name="sura2">Al-Baqarah</string>
    <string name="sura3">Al Imran</string>
    <string name="sura4">An-Nisa</string>
    <string name="sura5">Al-Ma\'idah</string>
    <string name="sura6">Al-An\'am</string>
    <string name="sura7">Al-A\'raf</string>
    <string name="sura8">Al-Anfal</string>
    <string name="sura9">At-Tawbah</string>
    <string name="sura10">Yunus</string>
    <string name="sura11">Hud</string>
    <string name="sura12">Yusuf</string>
    <string name="sura13">Ar-Ra\'d</string>
    <string name="sura14">Ibrahim</string>
    <string name="sura15">Al-Hijr</string>
    <string name="sura16">An-Nahl</string>
    <string name="sura17">Al-Isra</string>
    <string name="sura18">Al-Kahf</string>
    <string name="sura19">Maryam</string>
    <string name="sura20">Ta-Ha</string>
    <string name="sura21">Al-Anbiya</string>
    <string name="sura22">Al-Hajj</string>
    <string name="sura23">Al-Mu\'minun</string>
    <string name="sura24">An-Nur</string>
    <string name="sura25">Al-Furqan</string>
    <string name="sura26">Ash-Shu\'ara</string>
    <string name="sura27">An-Naml</string>
    <string name="sura28">Al-Qasas</string>
    <string name="sura29">Al-Ankabut</string>
    <string name="sura30">Ar-Rum</string>
    <string name="sura31">Luqmaan</string>
    <string name="sura32">As-Sajda</string>
    <string name="sura33">Al-Ahzaab</string>
    <string name="sura34">Saba</string>
    <string name="sura35">Faatir</string>
    <string name="sura36">Yaseen</string>
    <string name="sura37">As-Saaffaat</string>
    <string name="sura38">Saad</string>
    <string name="sura39">Az-Zumar</string>
    <string name="sura40">Ghafir</string>
    <string name="sura41">Fussilat</string>
    <string name="sura42">Ash_Shooraa</string>
    <string name="sura43">Az-Zukhruf</string>
    <string name="sura44">Ad-Dukhaan</string>
    <string name="sura45">Al-Jaathiyah</string>
    <string name="sura46">Al-Ahqaaf</string>
    <string name="sura47">Muhammad</string>
    <string name="sura48">Al-Fath</string>
    <string name="sura49">Al-Hujuraat</string>
    <string name="sura50">Qaaf</string>
    <string name="sura51">Adh-Dhaariyaat</string>
    <string name="sura52">At-Toor</string>
    <string name="sura53">An-Najm</string>
    <string name="sura54">Al-Qamar</string>
    <string name="sura55">Ar-Rahman</string>
    <string name="sura56">Al-Waqi\'a</string>
    <string name="sura57">Al-Hadeed</string>
    <string name="sura58">Al-Mujadila</string>
    <string name="sura59">Al-Hashr</string>
    <string name="sura60">Al-Mumtahanah</string>
    <string name="sura61">As-Saff</string>
    <string name="sura62">Al-Jumu\'ah</string>
    <string name="sura63">Al-Munafiqoon</string>
    <string name="sura64">At-Taghabun</string>
    <string name="sura65">At-Talaq</string>
    <string name="sura66">At-Tahreem</string>
    <string name="sura67">Al-Mulk</string>
    <string name="sura68">Al-Qalam</string>
    <string name="sura69">Al-Haaqqa</string>
    <string name="sura70">Al-Ma\'aarij</string>
    <string name="sura71">Nooh</string>
    <string name="sura72">Al-Jinn</string>
    <string name="sura73">Al-Muzzammil</string>
    <string name="sura74">Al-Muddaththir</string>
    <string name="sura75">Al-Qiyamah</string>
    <string name="sura76">Al-Insaan</string>
    <string name="sura77">Al-Mursalaat</string>
    <string name="sura78">An-Naba\'</string>
    <string name="sura79">An-Naazi\'aat</string>
    <string name="sura80">Abasa</string>
    <string name="sura81">At-Takweer</string>
    <string name="sura82">Al-Infitar</string>
    <string name="sura83">Al-Mutaffifeen</string>
    <string name="sura84">Al-Inshiqaaq</string>
    <string name="sura85">Al-Burooj</string>
    <string name="sura86">At-Taariq</string>
    <string name="sura87">Al-A\'laa</string>
    <string name="sura88">Al-Ghaashiyah</string>
    <string name="sura89">Al-Fajr</string>
    <string name="sura90">Al-Balad</string>
    <string name="sura91">Ash-Shams</string>
    <string name="sura92">Al-Layl</string>
    <string name="sura93">Ad-Dhuha</string>
    <string name="sura94">Al-Inshirah</string>
    <string name="sura95">At-Teen</string>
    <string name="sura96">Al-\'Alaq</string>
    <string name="sura97">Al-Qadr</string>
    <string name="sura98">Al-Bayyinahh</string>
    <string name="sura99">Az-Zalzalah</string>
    <string name="sura100">	Al-\'Aadiyaat</string>
    <string name="sura101">Al-Qaari\'ah</string>
    <string name="sura102">At-Takaathur</string>
    <string name="sura103">Al-\'Asr</string>
    <string name="sura104">Al-Humazah</string>
    <string name="sura105">Al-Feel</string>
    <string name="sura106">Quraysh</string>
    <string name="sura107">Al-Maa\'oon</string>
    <string name="sura108">Al-Kawthar</string>
    <string name="sura109">Al-Kaafiroon</string>
    <string name="sura110">An-Nasr</string>
    <string name="sura111">Al-Masad</string>
    <string name="sura112">Al-Ikhlaas</string>
    <string name="sura113">Al-Falaq</string>
    <string name="sura114">Al-Naas</string>


    <string name="para1_content_description">Go to Para 1</string>
    <string name="para2_content_description">Go to Para 2</string>
    <string name="para3_content_description">Go to Para 3</string>
    <string name="para4_content_description">Go to Para 4</string>
    <string name="para5_content_description">Go to Para 5</string>
    <string name="para6_content_description">Go to Para 6</string>
    <string name="para7_content_description">Go to Para 7</string>
    <string name="para8_content_description">Go to Para 8</string>
    <string name="para9_content_description">Go to Para 9</string>
    <string name="para10_content_description">Go to Para 10</string>
    <string name="para11_content_description">Go to Para 11</string>
    <string name="para12_content_description">Go to Para 12</string>
    <string name="para13_content_description">Go to Para 13</string>
    <string name="para14_content_description">Go to Para 14</string>
    <string name="para15_content_description">Go to Para 15</string>
    <string name="para16_content_description">Go to Para 16</string>
    <string name="para17_content_description">Go to Para 17</string>
    <string name="para18_content_description">Go to Para 18</string>
    <string name="para19_content_description">Go to Para 19</string>
    <string name="para20_content_description">Go to Para 20</string>
    <string name="para21_content_description">Go to Para 21</string>
    <string name="para22_content_description">Go to Para 22</string>
    <string name="para23_content_description">Go to Para 23</string>
    <string name="para24_content_description">Go to Para 24</string>
    <string name="para25_content_description">Go to Para 25</string>
    <string name="para26_content_description">Go to Para 26</string>
    <string name="para27_content_description">Go to Para 27</string>
    <string name="para28_content_description">Go to Para 28</string>
    <string name="para29_content_description">Go to Para 29</string>
    <string name="para30_content_description">Go to Para 30</string>

    <string name="btn_start_text">Start</string>
    <string name="btn_resume_text">Resume</string>
    <string name="btn_findbyparah_text">Find by Parah</string>
    <string name="btn_findbysurah_text">Find by Surah</string>
</resources>
